# aoc2023

./: README.md  aoc2023.cabal
.github/workflows/: build.yml
day01/: solution_1.hs  solution_2.hs
day02/: solution_1.hs  solution_2.hs
day03/: solution_1.hs  solution_2.hs
day04/: solution_1.hs  solution_2.hs
day05/: solution_1.hs  solution_2.hs
day06/: solution_1.hs  solution_2.hs
day07/: solution_1.hs  solution_2.hs
day08/: solution_1.hs  solution_2.hs
day09/: solution_1.hs  solution_2.hs
