cabal-version:  3.0
name:           aoc2023
version:        0.1.0.0
synopsis:       My advent of code 2023 solutions
homepage:       https://github.com/memowe/aoc2023
license:        MIT
license-file:   LICENSE
author:         Mirko Westermeier
maintainer:     mirko@westermeier.de
build-type:     Simple

common base
  default-language:   Haskell2010
  default-extensions: TupleSections
  ghc-options:        -Wall
  build-depends:      base ^>=4.17.2.0
                    , containers
                    , extra
                    , microlens-platform
                    , mtl
                    , split

executable day01_1
  import:         base
  hs-source-dirs: day01
  main-is:        solution_1.hs

executable day01_2
  import:         base
  hs-source-dirs: day01
  main-is:        solution_2.hs

executable day02_1
  import:         base
  hs-source-dirs: day02
  main-is:        solution_1.hs

executable day02_2
  import:         base
  hs-source-dirs: day02
  main-is:        solution_2.hs

executable day03_1
  import:         base
  hs-source-dirs: day03
  main-is:        solution_1.hs

executable day03_2
  import:         base
  hs-source-dirs: day03
  main-is:        solution_2.hs

executable day04_1
  import:         base
  hs-source-dirs: day04
  main-is:        solution_1.hs

executable day04_2
  import:         base
  hs-source-dirs: day04
  main-is:        solution_2.hs

executable day05_1
  import:         base
  hs-source-dirs: day05
  main-is:        solution_1.hs

executable day05_2
  import:         base
  hs-source-dirs: day05
  main-is:        solution_2.hs

executable day06_1
  import:         base
  hs-source-dirs: day06
  main-is:        solution_1.hs

executable day06_2
  import:         base
  hs-source-dirs: day06
  main-is:        solution_2.hs

executable day07_1
  import:         base
  hs-source-dirs: day07
  main-is:        solution_1.hs

executable day07_2
  import:         base
  hs-source-dirs: day07
  main-is:        solution_2.hs

executable day08_1
  import:             base
  hs-source-dirs:     day08
  main-is:            solution_1.hs
  default-extensions: TemplateHaskell

executable day08_2
  import:             base
  hs-source-dirs:     day08
  main-is:            solution_2.hs
  default-extensions: TemplateHaskell

executable day09_1
  import:         base
  hs-source-dirs: day09
  main-is:        solution_1.hs
